--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,133 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Abubakar Sadiq Ismail
+    - name: Location
+      value: Abuja, Nigeria
+    - name: Email
+      value: abubakarsadiqismail@proton.me
+    - name: Phone
+      value: +234 813 135 4171
+    - name: LinkedIn
+      value: <a href="https://www.linkedin.com/in/abubakharismail">linkedin.com/in/abubakharismail</a>
+    - name: GitHub
+      value: <a href="https://github.com/ismaelsadeeq">github.com/ismaelsadeeq</a>
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: B.Tech. Computer Science
+      institution: Modibbo Adama University of Technology
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - "CGPA: 4.6/5.0"
+        - Nigerian Association of Computing Students – Outstanding Performance Award
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Bitcoin Core Developer (Open Source Cohort)
+      institution: Btrust, Lagos, Nigeria
+      year: Mar 2025 – Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Reviewed and tested pull requests for Bitcoin Core's Cluster Mempool and mining interface components.
+        - Submitted PR improving mining interfaces and documentation of the Assume keyword.
+        - Hosted a PR Review Club session for a checkblock interface addition.
+    
+    - title: Bitcoin Core Developer (Intern)
+      institution: Chaincode Labs, New York, NY
+      year: Nov 2023 – Feb 2025
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Researched and resolved Bitcoin Core's double coinbase reservation bug, potentially improving miner rewards by 0.1%.
+        - Contributed to Bitcoin core node fee estimation improvements projects; enabled post block assembly package fee rate analysis.
+        - Participated in peer-reviewed contributions to Cluster Mempool and Mining Interface components PRs.
+    
+    - title: Bitcoin Core Developer (Starter Grant)
+      institution: Btrust Builders, Lagos, Nigeria
+      year: Dec 2023 – Oct 2024
       description:
+        - Added error reporting enhancements and weight limits in transaction funding RPCs.
+        - Opened a PR that adds a startup option serving as a safeguard to prevent mistakenly creating insane fee transactions.
+        - Collaborated on Cluster Mempool reviews and tests.
+    
+    - title: Bitcoin Core Developer (Independent Contractor)
+      institution: Chaincode Labs, New York, NY
+      year: Jun 2023 – Nov 2023
+      description:
+        - Fixed stale fee estimate issue by ensuring hourly data flushing.
+        - Updated mempool interaction with fee estimator for non-blocking faster block propagation via async fee estimator updates.
+        - Enhanced descriptorprocesspsbt RPC to return hex-encoded transactions on completion.
+        - Reviewed critical PRs in mempool and wallet components.
+    
+    - title: Software Engineering Fellow
+      institution: Btrust Builders, Lagos, Nigeria
+      year: Jan 2023 – Jul 2023
+      description:
+        - Developed a Bitcoin block explorer with NestJS, Electrs, and React.
+        - Built satPay – a Lightning payment platform for businesses with LND + MongoDB.
+        - Published private-tx npm library for Bitcoin privacy analysis.
+        - Contributed to LNDK (Rust) by enabling config management with configure_me crate.
+    
+    - title: Backend Engineer
+      institution: Etijar Financial Technologies, Abuja, Nigeria
+      year: Feb 2022 – Dec 2022
+      description:
+        - Built microservices + API Gateway using NestJS, MongoDB, and RabbitMQ.
+        - Deployed on Docker/DigitalOcean.
+    
+    - title: Lead Organizer
+      institution: Google Developer Student Club, MAUTECH, Yola, Nigeria
+      year: Jul 2021 – Jul 2022
+      description:
+        - Led technical events, hackathons, and training sessions.
+        - Mentored student teams in Google Solution Challenge targeting UNSDGs.
+    
+    - title: Backend Developer
+      institution: Mentors Innovation Hub, Yola, Nigeria
+      year: May 2021 – Jan 2022
+      description:
+        - Built REST APIs for agricultural investment and e-commerce platforms.
+        - Integrated payment via Paystack, WooCommerce, and MySQL ORM.
+    
+    - title: Software Development Intern
+      institution: NutsCoders Tech, Yola, Nigeria
+      year: Jan 2020 – Mar 2021
+      description:
+        - Implemented emergency alert system for wearables using Node.js, MongoDB, Pusher.js.
+        - Developed financial transaction backend with multi-gateway support and cron-based automation.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Languages
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - C++
+        - Python
+        - JavaScript/TypeScript
+    - title: Frameworks & Tools
       items:
-        - Description 1.
-        - Description 2.
+        - Node.js, NestJS, Express, React
+        - Git, Docker, RabbitMQ, Redis
+        - Sentry, New Relic, Postman
+    - title: Databases
+      items:
+        - MySQL
+        - MongoDB
+    - title: Blockchain & Cryptography
+      items:
+        - Bitcoin Core development
+        - Lightning Network
+        - Cryptographic protocols and primitives
+    - title: Other
+      items:
+        - API Design & Architecture
+        - Testing (Jest)
+        - Containerization
+        - Data Structures & Algorithms
 
-- title: Other Interests
+- title: Summary
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Software Engineer with a strong foundation in backend systems and Bitcoin Core development
+    - Experienced in writing performant code and contributing to open-source projects
+    - Passionate about decentralized systems with keen interest in cryptographic protocols
