--- a/docker-compose-slim.yml
+++ b/docker-compose-slim.yml
@@ -1,7 +1,7 @@
 # this file uses prebuilt image in dockerhub
 services:
   jekyll:
-    image: amirpourmand/al-folio:slim
+    image: ismaelsadeeq/website:slim
     #build: .
     ports:
       - 8080:8080
