--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -15,7 +15,7 @@
 email: abubakarsadiqismail@proton.me # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-github_username: github.com/ismaelsadeeq # your GitHub user name
+github_username: ismaelsadeeq # your GitHub user name
 # gitlab_username: # your GitLab user name
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
